[package]
name = "wdc"
version = "0.1.0"
authors = ["Michael Lee <imichael2e2@proton.me>"]
edition = "2021"
description = "A WebDriver client library."
repository = "http://somewhere"
documentation = "https://docs.rs/wdc"
license-file = "GPL-3.0-or-later"
keywords = ["w3c", "webdriver", "client", "automation", "webdriver-bidi"]
categories = ["web-programming", "network-programming"]
exclude = ["*.bak"]

[features]
default = ["firefox"]
firefox = []
chromium = []
bidi = []
devel = []
diag = []

[dependencies]
regex = "1.7.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.93"

[dev-dependencies]
serde_test = "1.0.159"
glob = "0.3.1"
libc = "0.2.142"

[package.metadata.docs.rs]
all-features = true
