[package]
name = "wdc"
version = "0.1.0-beta.2"
authors = ["Michael Lee <imichael2e2@proton.me>"]
edition = "2021"
description = "A WebDriver client library."
repository = "http://github.com/imichael2e2/wdc"
documentation = "https://docs.rs/wdc"
license = "GPL-3.0-or-later"
keywords = ["w3c", "webdriver", "client", "automation", "webdriver-bidi"]
categories = ["web-programming", "network-programming"]
exclude = ["*.bak"]

[features]
default = ["firefox"]
firefox = []
chromium = []
bidi = []
devel = []
diag = []

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.93"
regex = "1.7.1"

[dev-dependencies]
serde_test = "1.0.159"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]